// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fullUnicodeString (integration) > should be able to shrink 'Hey 🐱!' with fc.fullUnicodeString() 1`] = `
""Hey 🐱!"
├> ""
├> " 🐱!"
|  ├> "🐱!"
|  |  ├> "!"
|  |  |  ├> ""
|  |  |  └> " "
|  |  |     └> ""
|  |  ├> " !"
|  |  |  ├> "!"
|  |  |  |  ├> ""
|  |  |  |  └> " "
|  |  |  |     └> ""
|  |  |  ├> " "
|  |  |  |  └> ""
|  |  |  └> "  "
|  |  |     ├> " "
|  |  |     |  └> ""
|  |  |     └> " "
|  |  |        └> ""
|  |  ├> "︙!"
|  |  |  ├> "!"
|  |  |  |  ├> ""
|  |  |  |  └> " "
|  |  |  |     └> ""
|  |  |  ├> "笍!"
|  |  |  |  ├> "!"
|  |  |  |  |  ├> ""
|  |  |  |  |  └> " "
|  |  |  |  |     └> ""
|  |  |  |  ├> "㶇!"
|  |  |  |  |  ├> "!"
|  |  |  |  |  |  ├> ""
|  |  |  |  |  |  └> " "
|  |  |  |  |  |     └> ""
|  |  |  |  |  ├> "Ễ!"
|  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  ├> "ར!"
|  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  ├> "ޱ!"
|  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  ├> "ϙ!"
|  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  ├> "ǭ!"
|  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  ├> "÷!"
|  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  ├> "\\u001d!"
|  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  ├> "^!"
|  |  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  ├> "?!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "0!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "(!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "$!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "\\"!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  └> …
|  |  |  |  |  |  └> …
|  |  |  |  |  └> …
|  |  |  |  └> …
|  |  |  └> …
|  |  └> …
|  └> …
└> …"
`;

exports[`fullUnicodeString (integration) > should be able to shrink 'Yo 🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱…' with fc.fullUnicodeString() 1`] = `
""Yo 🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱!"
├> ""
├> "🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱!"
|  ├> "🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱🐱!"
|  |  ├> "🐱🐱🐱🐱🐱🐱!"
|  |  |  ├> "🐱🐱🐱!"
|  |  |  |  ├> "🐱!"
|  |  |  |  |  ├> "!"
|  |  |  |  |  |  ├> ""
|  |  |  |  |  |  └> " "
|  |  |  |  |  |     └> ""
|  |  |  |  |  ├> " !"
|  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  ├> " "
|  |  |  |  |  |  |  └> ""
|  |  |  |  |  |  └> "  "
|  |  |  |  |  |     ├> " "
|  |  |  |  |  |     |  └> ""
|  |  |  |  |  |     └> " "
|  |  |  |  |  |        └> ""
|  |  |  |  |  ├> "︙!"
|  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  ├> "笍!"
|  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  ├> "㶇!"
|  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  ├> "Ễ!"
|  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  ├> "ར!"
|  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  ├> "ޱ!"
|  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  ├> "ϙ!"
|  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  ├> "ǭ!"
|  |  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  ├> "÷!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "\\u001d!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "^!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "?!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "0!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "(!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "$!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> " "
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |     └> ""
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "\\"!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  ├> "!"
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  |  └> …
|  |  |  |  |  |  |  └> …
|  |  |  |  |  |  └> …
|  |  |  |  |  └> …
|  |  |  |  └> …
|  |  |  └> …
|  |  └> …
|  └> …
└> …"
`;
